--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@firebase/app": "^0.6.13",
+    "@firebase/app": "0.6.13",
     "firebase": "8.1.0",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-firebaseui": "4.1.0",
-    "react-router-dom": "5.2.0"
+    "react-is": ">= 16.8.0",
+    "react-router-dom": "5.2.0",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
