--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "@firebase/app": "0.6.13",
     "firebase": "8.1.0",
+    "firebaseui": "^4.7.3",
     "react": "17.0.0",
-    "react-date-picker": "^8.0.7",
+    "react-date-picker": "8.0.7",
     "react-dom": "17.0.0",
     "react-firebaseui": "4.1.0",
     "react-is": "17.0.1",
